UI Class Adding and removing book features

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
             <input type="text" id="isbn" class="form-control">
             </div>
             <div class="d-grid mt-3">
-
                 <input type="submit" value="Add Book" class="btn btn-info">            
             </div>
         </form>
@@ -41,8 +40,11 @@
                     <th></th>
                 </tr>
             </thead>
-            <tbody id="book-list"></tbody>
+            <tbody id="book-list">
+
+            </tbody>
         </table>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
