--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         </h1>
         <form id="book-form">
             <div class="form-group">
-                <label for="title">Title</label>
+                <label class="form-label" for="title">Title</label>
             <input type="text" id="title" class="form-control">
             </div>
             <div class="form-group">
-                <label for="author">Author</label>
+                <label class="form-label" for="author">Author</label>
             <input type="text" id="author" class="form-control">
             </div>
             <div class="form-group">
-                <label for="isbn">ISBN</label>
+                <label class="form-label" for="isbn">ISBN</label>
             <input type="text" id="isbn" class="form-control">
             </div>
             <div class="d-grid mt-3">
